[gd_scene load_steps=16 format=3 uid="uid://yplxtdjvqgfm"]

[ext_resource type="Script" uid="uid://c4l3siuimu8gs" path="res://scenes/3d_scene.gd" id="1_35hqx"]
[ext_resource type="Shader" uid="uid://irwsgt2iw8yk" path="res://shaders/axis.gdshader" id="2_clacj"]
[ext_resource type="ArrayMesh" uid="uid://coqe4qp74qc35" path="res://assets/cylinder.obj" id="3_68u10"]
[ext_resource type="Shader" uid="uid://22rra2x4a36j" path="res://shaders/grid.gdshader" id="4_lntgf"]
[ext_resource type="Shader" uid="uid://dlmmpwwsstwh" path="res://shaders/box_selector.gdshader" id="6_ronic"]
[ext_resource type="Texture2D" uid="uid://c1e6kclfddeqd" path="res://assets/Image.svg" id="7_g3xr8"]
[ext_resource type="Shader" uid="uid://bpnj81ic8mx5x" path="res://shaders/circle_selector.gdshader" id="8_1afsg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fgykj"]
render_priority = 0
shader = ExtResource("2_clacj")
shader_parameter/mask_color = Vector3(0, 0, 0)

[sub_resource type="Environment" id="Environment_35hqx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t6jrm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0x8g3"]

[sub_resource type="QuadMesh" id="QuadMesh_aogl4"]
size = Vector2(160, 160)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3t16a"]
render_priority = 0
shader = ExtResource("4_lntgf")
shader_parameter/num_squares = 160.0
shader_parameter/interval = 5.0
shader_parameter/thin = 0.01
shader_parameter/thick = 0.005
shader_parameter/color_sat = 0.1
shader_parameter/zoom = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ek30l"]
shader = ExtResource("6_ronic")
shader_parameter/scale = Vector2(1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_axlhj"]
shader = ExtResource("8_1afsg")
shader_parameter/scale = 1.0
shader_parameter/dash_density = 32.0
shader_parameter/thickness = 0.08

[node name="3DScene" type="Node3D"]
script = ExtResource("1_35hqx")
mat = SubResource("ShaderMaterial_fgykj")
amesh = ExtResource("3_68u10")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_35hqx")

[node name="Base" type="Node3D" parent="."]

[node name="Arm" type="Node3D" parent="Base"]

[node name="Camera3D" type="Camera3D" parent="Base/Arm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Base/Arm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.60002)

[node name="ResetBasis" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "+"

[node name="Model" type="MeshInstance3D" parent="."]
material_override = SubResource("ShaderMaterial_t6jrm")
material_overlay = SubResource("ShaderMaterial_0x8g3")

[node name="Grid" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.001, 0)
mesh = SubResource("QuadMesh_aogl4")
surface_material_override/0 = SubResource("ShaderMaterial_3t16a")

[node name="BoxSelector" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_ek30l")
scale = Vector2(0.1, 0.1)
texture = ExtResource("7_g3xr8")
centered = false

[node name="CircleSelector" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_axlhj")
texture = ExtResource("7_g3xr8")

[connection signal="button_down" from="ResetBasis" to="." method="_on_reset_basis_button_down"]
